# ChangeLog for x11-terms/mrxvt
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/mrxvt/ChangeLog,v 1.54 2007/11/10 21:17:24 cla Exp $

  10 Nov 2007; Dawid Węgliński <cla@gentoo.org> mrxvt-0.5.3-r1.ebuild:
  Stable on x86 (bug #198727)

  10 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org> mrxvt-0.5.3-r1.ebuild:
  Fix variable quoting.

*mrxvt-0.5.3-r1 (27 Aug 2007)

  27 Aug 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/mrxvt-0.5.3-no-scroll-with-buffer.patch, -mrxvt-0.5.3.ebuild,
  +mrxvt-0.5.3-r1.ebuild:
  Fix scrolling bug.

*mrxvt-0.5.3 (22 Aug 2007)

  22 Aug 2007; Krzysiek Pawlik <nelchael@gentoo.org> +mrxvt-0.5.3.ebuild:
  Version bump, see bug #189872, thanks to Gautam Iyer
  <gi1242@users.sourceforge.net>.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; mrxvt-0.5.1.ebuild,
  mrxvt-0.5.2-r1.ebuild:
  Drop virtual/x11 references.

  02 Nov 2006; Mamoru KOMACHI <usata@gentoo.org> mrxvt-0.5.2-r1.ebuild:
  Added utempter USE flag. Thanks to Daniel Webert <rockoo@gmail.com>, James
  Rowe <jnrowe@ukfsn.org> and Jimmy Zhou <jmzhou13@hotmail.com>. This closes
  bug #67887.

*mrxvt-0.5.2-r1 (16 Oct 2006)

  16 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/mrxvt-0.5.2-no_debug_x.patch, -mrxvt-0.5.2.ebuild,
  +mrxvt-0.5.2-r1.ebuild:
  Add a patch to speed up mrxvt by removing X debug. See bug #151532.

  11 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org> mrxvt-0.5.2.ebuild:
  Fix useage of LINGUAS.

  04 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org> mrxvt-0.5.2.ebuild:
  Add missing xpm USE flag.

*mrxvt-0.5.2 (04 Oct 2006)

  04 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org> +mrxvt-0.5.2.ebuild:
  Version bump, see bug #149864.

  09 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  -files/mrxvt-0.3.13-xdefaults.patch, -files/noflicker-0.4.2.patch,
  -files/xft-colorbd-0.4.2.patch, -mrxvt-0.3.13-r1.ebuild,
  -mrxvt-0.4.1.ebuild, -mrxvt-0.4.2.ebuild, -mrxvt-0.5.0.ebuild: