@@ -1,5 +1,5 @@
 AUX mrxvt-0.5.3-no-scroll-with-buffer.patch 2182 RMD160 0b05e382fe8736617961d8790786ba0341945caf SHA1 303de6d33aa76892f24c6fac7b93ac21a945fda5 SHA256 5c7b6e0e4f07b35d8ed14ef2c87e8c57bfc4806dcd01f6ee14ef0b233c5b6932
 DIST mrxvt-0.5.3.tar.gz 592897 RMD160 76fbbd5ba20215dd7785eafa07dae909029194ec SHA1 442006f1d797ea5464c5c49d26d0cdecf79160f4 SHA256 e2327b7fdf1db3f2152d7cbda564f638ec11a4bed17f69e6de985c888ab5d411
-EBUILD mrxvt-0.5.3-r1.ebuild 3317 RMD160 6e8af548f8aed72eb1e482591a6798f35638dbf2 SHA1 4bce16d5ad241926dbf07af9783eb2714b18d297 SHA256 8d53ed422aeca0cd389403bfcbd2def3d34520029cf57278aa4f255f1ab20185
-MISC ChangeLog 7793 RMD160 6e44f3b8170d68d866755739fd01e08ec0117998 SHA1 82ee9eebe97c492f471c842827f00fdf162c1ec5 SHA256 4fa270d08c259ecff946b0581102d915680199f245b3ea5cb8ada053d77be2dc
+EBUILD mrxvt-0.5.3-r1.ebuild 3301 RMD160 9e00f3ae53845cbf3a31079959cc555701449658 SHA1 ac1828810a4e28991a126c1f54d828ac31a4c819 SHA256 9b7cd9f3b2cacf9c7a57cf2e2bee6f8ac5d640a91d1b077e2609b1e49251ddcc
+MISC ChangeLog 8160 RMD160 ef24b4de0c8fb70f955115414d400ddfa6da0dc7 SHA1 827ef5c589a17cecbf9729d7e2230ae187fa5bfc SHA256 c1dc07e6339cef418dc50f742f8f2be8d714e48c2dc9478d368a15d34dfe705c
 MISC metadata.xml 285 RMD160 7a393ddbd1e4bc0b8c8105de7db5fb64469ab0eb SHA1 e33da3adbda26c1cc1f8ea6c2773b114d22fcfd1 SHA256 849e6d884378550f853c172d2a2f5095b9a167259155c0ec629c893c3ac13b83
